--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
+    "express-rate-limit": "^7.5.0",
     "isbot": "^5.1.0",
+    "libphonenumber-js": "^1.11.20",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
