--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,17 +1,22 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "10cd0ca9a3d009f3c94cedcd57d64839"
-application_url = "https://architects-lending-nowhere-legends.trycloudflare.com"
-embedded = true
 name = "OrderWhisper"
+client_id = "8d6d56b5c590e91f6c2f72a31f3a62a5"
+application_url = "https://56e3-197-237-117-29.ngrok-free.app"
+embedded = true
 handle = "orderwhisper"
+
+scopes = "read_orders,write_orders,read_fulfillments,write_fulfillments"
+
+extension_directories = []
 
 [build]
 include_config_on_deploy = true
 automatically_update_urls_on_dev = true
+dev_store_url = "orderwhisper.myshopify.com"
 
 [webhooks]
-api_version = "2025-01"
+api_version = "2024-01"
 
   [[webhooks.subscriptions]]
   topics = [ "app/uninstalled" ]
@@ -36,11 +41,7 @@ api_version = "2025-01"
 scopes = "write_products,read_orders,write_fulfillments"
 
 [auth]
-redirect_urls = [
-  "https://architects-lending-nowhere-legends.trycloudflare.com/auth/callback",
-  "https://architects-lending-nowhere-legends.trycloudflare.com/auth/shopify/callback",
-  "https://architects-lending-nowhere-legends.trycloudflare.com/api/auth/callback"
-]
+redirect_urls = ["https://56e3-197-237-117-29.ngrok-free.app/auth/callback"]
 
 [pos]
 embedded = false
