--- a/shopify.app.orderwhisper.toml
+++ b/shopify.app.orderwhisper.toml
@@ -1,48 +1,47 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-name = "OrderWhisper"
 client_id = "10cd0ca9a3d009f3c94cedcd57d64839"
-application_url = "https://merger-appointment-guest-wc.trycloudflare.com"
-embedded = true
-handle = "orderwhisper"
-scopes = "read_orders,write_orders,read_fulfillments,write_fulfillments"
 extension_directories = [ ]
+application_url = "https://springs-costume-aspect-ultimate.trycloudflare.com"
+embedded = true
+name = "OrderWhisper"
+handle = "whatsapp-notification-12"
 
 [build]
-include_config_on_deploy = true
 automatically_update_urls_on_dev = true
 dev_store_url = "orderwhisper.myshopify.com"
+include_config_on_deploy = true
 
 [webhooks]
-api_version = "2024-01"
-
-  [[webhooks.subscriptions]]
-  topics = [ "app/uninstalled" ]
-  uri = "/webhooks/app/uninstalled"
+api_version = "2025-01"
 
   [[webhooks.subscriptions]]
   topics = [ "app/scopes_update" ]
   uri = "/webhooks/app/scopes_update"
 
   [[webhooks.subscriptions]]
-  topics = [ "orders/create" ]
-  uri = "/webhooks/orders/create"
-  include_fields = [ "id", "order_number", "customer" ]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
 
   [[webhooks.subscriptions]]
   topics = [ "fulfillments/create" ]
   uri = "/webhooks/fulfillments/create"
   include_fields = [ "order_id", "order" ]
 
+  [[webhooks.subscriptions]]
+  topics = [ "orders/create" ]
+  uri = "/webhooks/orders/create"
+  include_fields = [ "id", "order_number", "customer" ]
+
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_orders,write_orders,read_fulfillments,write_fulfillments"
+scopes = "write_products"
 
 [auth]
 redirect_urls = [
-  "https://merger-appointment-guest-wc.trycloudflare.com/auth/callback",
-  "https://merger-appointment-guest-wc.trycloudflare.com/auth/shopify/callback",
-  "https://merger-appointment-guest-wc.trycloudflare.com/api/auth/callback"
+  "https://springs-costume-aspect-ultimate.trycloudflare.com/auth/callback",
+  "https://springs-costume-aspect-ultimate.trycloudflare.com/auth/shopify/callback",
+  "https://springs-costume-aspect-ultimate.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
