--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "@shopify/shopify-app-session-storage-redis": "^4.2.5",
+    "@shopify/shopify-app-session-storage-sqlite": "^4.0.13",
+    "better-sqlite3": "^11.8.1",
     "express-rate-limit": "^7.5.0",
     "ioredis": "^5.5.0",
     "isbot": "^5.1.0",
