chore: update project configuration and documentation for OrderWhisper

--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,13 @@ database.sqlite
 
 .env
 .env.*
-
-
-
-
+!.env.example
 
 /extensions/*/dist
 
 # Ignore shopify files created during app dev
 .shopify/*
 .shopify.lock
+
+*.log
+.DS_Store
