--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,54 @@ database.sqlite
 
 .env
 .env.*
-
-
-
-
+!.env.example
+!.env.render
 
 /extensions/*/dist
 
 # Ignore shopify files created during app dev
 .shopify/*
 .shopify.lock
+
+*.log
+.DS_Store
+
+# Development files
+.vscode/
+.idea/
+*.swp
+*.swo
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Render specific
+.render-buildlogs/
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Database
+*.sqlite
+*.sqlite3
+/prisma/migrations/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+/coverage
+.nyc_output
+
+# Production
+/dist
+/build
+.next/
+out/
+.vercel
