feat: enhance WhatsApp notification system with improved templates, error handling, and Redis tracking

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,28 @@
-SHOPIFY_API_KEY=your_api_key_here
-SHOPIFY_API_SECRET=your_api_secret_here
+# Shopify App Credentials
+SHOPIFY_API_KEY=your_shopify_api_key
+SHOPIFY_API_SECRET=your_shopify_api_secret
+SHOPIFY_APP_URL=https://your-app-url.com
 SCOPES=read_orders,write_orders,read_fulfillments,write_fulfillments
-HOST=https://your-domain.com
-SHOPIFY_APP_URL=https://your-domain.com
-APP_NAME=OrderWhisper
+
+# WhatsApp Business API Credentials
 WHATSAPP_PHONE_NUMBER_ID=your_whatsapp_phone_number_id
-WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token 
+WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token
+
+# Security
+ENCRYPTION_KEY=your_32_byte_encryption_key
+
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/orderwhisper
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100  # requests per window
+
+# Logging
+LOG_LEVEL=info  # debug, info, warn, error
+
+HOST=https://your-domain.com
+APP_NAME=OrderWhisper 
