--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,8 @@ services:
         sync: false
       - key: WHATSAPP_ACCESS_TOKEN
         sync: false
+      - key: ENCRYPTION_KEY
+        generateValue: true
       - key: HOST
         value: https://orderwhisper.onrender.com
       - key: SHOPIFY_APP_URL
@@ -24,6 +26,11 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: orderwhisper-db
+          property: connectionString
+      - key: REDIS_URL
+        fromService:
+          name: orderwhisper-redis
+          type: redis
           property: connectionString
     autoDeploy: true
     disk:
@@ -44,6 +51,12 @@ services:
       timeout: 5
       failureThreshold: 3
       gracePeriod: 120
+
+  - type: redis
+    name: orderwhisper-redis
+    ipAllowList: []
+    plan: starter
+    maxmemoryPolicy: noeviction
 
 databases:
   - name: orderwhisper-db
