--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,52 @@
-# Shopify App Credentials
-SHOPIFY_API_KEY=your_shopify_api_key
-SHOPIFY_API_SECRET=your_shopify_api_secret
-SHOPIFY_APP_URL=https://your-app-url.com
+# Application Environment
+NODE_ENV=development # Options: development, staging, production
+
+# Shopify Configuration
+SHOPIFY_API_KEY=your_api_key_here
+SHOPIFY_API_SECRET=your_api_secret_here
+SHOPIFY_APP_URL=http://localhost:3000 # Development: localhost, Production: https://orderwhisper.onrender.com
 SCOPES=read_orders,write_orders,read_fulfillments,write_fulfillments
 
-# WhatsApp Business API Credentials
-WHATSAPP_PHONE_NUMBER_ID=your_whatsapp_phone_number_id
-WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token
+# WhatsApp Business API Configuration
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+WHATSAPP_ACCESS_TOKEN=your_access_token
+WHATSAPP_API_VERSION=v17.0
 
 # Security
-ENCRYPTION_KEY=your_32_byte_encryption_key
+ENCRYPTION_KEY=your_32_byte_encryption_key # Must be 32 bytes for AES-256
+SESSION_SECRET=your_session_secret # For cookie signing
 
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/orderwhisper
+# Database Configuration
+DATABASE_URL=postgresql://user:password@localhost:5432/orderwhisper # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_SSL=false # Set to true in production
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379 # Format: redis://USER:PASSWORD@HOST:PORT/DB_NUMBER
+REDIS_SSL=false # Set to true in production
 
 # Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
-RATE_LIMIT_MAX_REQUESTS=100  # requests per window
+RATE_LIMIT_WINDOW_MS=900000 # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100 # Requests per window per IP
+WEBHOOK_RATE_LIMIT=50 # Webhook requests per minute
 
 # Logging
-LOG_LEVEL=info  # debug, info, warn, error
+LOG_LEVEL=info # Options: debug, info, warn, error
+LOG_FORMAT=json # Options: json, text
 
-HOST=https://your-domain.com
-APP_NAME=OrderWhisper 
+# Application Settings
+APP_NAME=OrderWhisper
+HOST=localhost # Development: localhost, Production: your domain
+PORT=3000
+
+# Feature Flags
+ENABLE_WEBHOOK_VALIDATION=true
+ENABLE_RATE_LIMITING=true
+ENABLE_MESSAGE_ENCRYPTION=true
+
+# Monitoring
+ENABLE_PERFORMANCE_MONITORING=false
+ENABLE_ERROR_TRACKING=true
+
+# Development Tools
+ENABLE_DEBUG_LOGGING=false # Set to true for development only
+ENABLE_TEST_WEBHOOKS=false # Enable test webhook endpoints in development 
