--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,14 @@ services:
     name: orderwhisper
     env: node
     plan: starter
-    buildCommand: npm install && npm run build
+    buildCommand: |
+      npm ci
+      npm run build
     startCommand: npm start
     healthCheckPath: /healthcheck
     envVars:
+      - key: NODE_VERSION
+        value: 20.10.0
       - key: NODE_ENV
         value: production
       - key: SHOPIFY_API_KEY
@@ -62,6 +66,8 @@ services:
         value: "false"
       - key: ENABLE_TEST_WEBHOOKS
         value: "false"
+      - key: PORT
+        value: "10000"
     autoDeploy: true
     disk:
       name: tmp
