--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@remix-run/route-config": "^2.15.0",
     "@shopify/api-codegen-preset": "^1.1.1",
     "@types/eslint": "^9.6.1",
+    "@types/express": "^5.0.0",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
